# flutter_semi_logger

./: CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/semi/flutter_semi_logger/: FlutterSemiLoggerPlugin.kt
cpp/: CMakeLists.txt  native_app.cpp
cpp/include/: native_app.h
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/semi/flutter_semi_logger_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_semi_logger.podspec
ios/Classes/: FlutterSemiLoggerPlugin.h  FlutterSemiLoggerPlugin.m  SwiftFlutterSemiLoggerPlugin.swift
ios/Classes/cpp/: native_app.cpp
ios/Classes/cpp/include/: native_app.h
lib/: flutter_semi_logger.dart
lib/src/exceptions/: semi_exception.dart
lib/src/logger/: colored.dart  semi_logger.dart  semi_logger_v1.dart
lib/src/logger/delegate/: android_debug_delegate.dart  ios_debug_delegate.dart  log_delegate.base.dart  release_delegate.dart
lib/src/logger/level/: semi_log_level.dart  semi_log_level_data.dart
lib/src/logger/style/: semi_log_style.dart  semi_log_style_data.dart
lib/src/native/: channel_connect.dart
